--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mdbreact": "^4.12.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
